k8s/chatbot/chatbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titanic-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titanic-chatbot
  template:
    metadata:
      labels:
        app: titanic-chatbot
    spec:
      containers:
        - name: titanic-chatbot
          image: quay.io/onepieceisrealdude/titanic/chatbot:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: titanic-chatbot-service
spec:
  selector:
    app: titanic-chatbot
  ports:
    - port: 8501
      name: http-port
      targetPort: 8501
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: titanic-chatbot
spec:
  to:
    kind: Service
    name: titanic-chatbot-service
  port:
    targetPort: http-port
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
